--- a/src/assets/sass/layout/_variables.custom.scss
+++ b/src/assets/sass/layout/_variables.custom.scss
@@ -90,6 +90,7 @@ $app-sidebar-dark-bg-color: #131313;
 $app-sidebar-dark-separator-color: #393945;
 $app-sidebar-dark-scrollbar-color-hover: lighten($app-sidebar-dark-separator-color, 2%);
 $app-sidebar-dark-menu-heading-color: #626671;
+// $app-sidebar-dark-menu-heading-color: #fff;
 $app-sidebar-dark-menu-sub-link-color: #888A8E;
 $app-sidebar-dark-menu-link-bg-color-active: #1C1C21;
 
