--- a/src/assets/sass/layout/_page-title.scss
+++ b/src/assets/sass/layout/_page-title.scss
@@ -4,11 +4,11 @@
 
 // Desktop mode
 @include media-breakpoint-up(lg) {
-    [data-kt-app-layout="dark-header"] {
-        .app-header {
-            .page-heading {
-                color: $white !important;
-            }  
-        } 
+  [data-mz-app-layout="dark-header"] {
+    .app-header {
+      .page-heading {
+        color: $white !important;
+      }
     }
+  }
 }
