--- a/src/assets/sass/core/components/_indicator.scss
+++ b/src/assets/sass/core/components/_indicator.scss
@@ -5,13 +5,13 @@
 .indicator-progress {
     display: none;
 
-    [data-kt-indicator="on"] > & {
+    [data-mz-indicator="on"] > & {
         display: inline-block;
     }
 }
 
 .indicator-label {
-    [data-kt-indicator="on"] > & {
+    [data-mz-indicator="on"] > & {
         display: none;
     }
 }
