--- a/src/assets/sass/core/components/stepper/_base.scss
+++ b/src/assets/sass/core/components/stepper/_base.scss
@@ -5,8 +5,8 @@
 // Base
 .stepper {
 	// Content
-	[data-kt-stepper-element="info"],
-	[data-kt-stepper-element="content"] {
+	[data-mz-stepper-element="info"],
+	[data-mz-stepper-element="content"] {
 		display: none;
 
 		&.current {
@@ -15,87 +15,87 @@
 	}
 
 	// Enable cursor pointer on clickable steppers
-	.stepper-item[data-kt-stepper-action="step"] {
+	.stepper-item[data-mz-stepper-action="step"] {
 		cursor: pointer;
 	}
 
 	// States
 	& {
-		[data-kt-stepper-action="final"] {
+		[data-mz-stepper-action="final"] {
 			display: none;
 		}
 
-		[data-kt-stepper-action="previous"] {
+		[data-mz-stepper-action="previous"] {
 			display: none;
 		}
 
-		[data-kt-stepper-action="next"] {
+		[data-mz-stepper-action="next"] {
 			display: inline-block;
 		}
 
-		[data-kt-stepper-action="submit"] {
+		[data-mz-stepper-action="submit"] {
 			display: none;
 		}
 	}
 
 	&.first {
-		[data-kt-stepper-action="previous"] {
+		[data-mz-stepper-action="previous"] {
 			display: none;
 		}
 
-		[data-kt-stepper-action="next"] {
+		[data-mz-stepper-action="next"] {
 			display: inline-block;
 		}
 
-		[data-kt-stepper-action="submit"] {
+		[data-mz-stepper-action="submit"] {
 			display: none;
 		}
 	}
 
 	&.between {
-		[data-kt-stepper-action="previous"] {
+		[data-mz-stepper-action="previous"] {
 			display: inline-block;
 		}
 
-		[data-kt-stepper-action="next"] {
+		[data-mz-stepper-action="next"] {
 			display: inline-block;
 		}
 
-		[data-kt-stepper-action="submit"] {
+		[data-mz-stepper-action="submit"] {
 			display: none;
 		}
 	}
 
 	&.last {
-		[data-kt-stepper-action="final"] {
+		[data-mz-stepper-action="final"] {
 			display: inline-block;
 		}
 
-		[data-kt-stepper-action="final"].btn-flex {
+		[data-mz-stepper-action="final"].btn-flex {
 			display: flex;
 		}
 
-		[data-kt-stepper-action="previous"] {
+		[data-mz-stepper-action="previous"] {
 			display: inline-block;
 		}
 
-		[data-kt-stepper-action="previous"].btn-flex {
+		[data-mz-stepper-action="previous"].btn-flex {
 			display: flex;
 		}
 
-		[data-kt-stepper-action="next"] {
+		[data-mz-stepper-action="next"] {
 			display: none;
 		}
 
-		[data-kt-stepper-action="next"].btn-flex {
+		[data-mz-stepper-action="next"].btn-flex {
 			display: flex;
 		}
 
-		[data-kt-stepper-action="submit"] {
+		[data-mz-stepper-action="submit"] {
 			display: inline-block;
 		}
 
-		[data-kt-stepper-action="submit"].btn-flex {
+		[data-mz-stepper-action="submit"].btn-flex {
 			display: flex;
 		}
 	}
