--- a/src/assets/sass/core/components/_drawer.scss
+++ b/src/assets/sass/core/components/_drawer.scss
@@ -48,6 +48,12 @@
 	display: none;
 }
 
+[data-mz-drawer="false"] {
+	display: flex !important;
+	position: fixed;
+	height: 100vh;
+}
+
 // Animation
 @keyframes animation-drawer-fade-in {
 	from   { opacity: 0; }
