--- a/src/assets/sass/core/layout/base/_reboot.scss
+++ b/src/assets/sass/core/layout/base/_reboot.scss
@@ -52,7 +52,7 @@ router-outlet {
 // Layouts
 body,
 .app-default {
-  background-color: var(--#{$prefix}app-bg-color);
+  background-color: var(--#{$prefix}app-bg-color) !important;
 }
 
 .app-blank {
